dark mode on the index fixed. #1

--- a/assets/css/components/_list.scss
+++ b/assets/css/components/_list.scss
@@ -46,7 +46,6 @@ section {
 			.card {
 				height: 350;
 				background-color: a.$dark-text-light-element;
-				box-shadow: 2px 1px 10px hsl(0, 0%, 90%);
 				padding-bottom: 30px;
 				width: 300px;
 				border-radius: 10px;
